tests/ui/stability-attribute/two-unstables.none.stderr
error[E0658]: use of unstable library features `g` and `h`
  --> $DIR/two-unstables.rs:24:5
   |
LL |     two_unstables::mac!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: reason for `g`: reason g
   = note: see issue #7 <https://github.com/rust-lang/rust/issues/7> for more information
   = note: see issue #8 <https://github.com/rust-lang/rust/issues/8> for more information about `h`
   = help: add `#![feature(g, h)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library features `a` and `b`
  --> $DIR/two-unstables.rs:15:16
   |
LL | struct Wrapper(two_unstables::Foo);
   |                ^^^^^^^^^^^^^^^^^^
   |
   = note: reason for `a`: reason a
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = note: see issue #2 <https://github.com/rust-lang/rust/issues/2> for more information about `b`
   = help: add `#![feature(a, b)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0046]: not all trait items implemented, missing: `method`
  --> $DIR/two-unstables.rs:19:1
   |
LL | impl two_unstables::Trait for Wrapper {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: default implementation of `method` is unstable
   = note: use of unstable library features `e` and `f`
   = note: reason for `e`: reason e
   = note: see issue #5 <https://github.com/rust-lang/rust/issues/5> for more information
   = note: see issue #6 <https://github.com/rust-lang/rust/issues/6> for more information about `f`
   = help: add `#![feature(e, f)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `nothing` is not yet stable as a const fn
  --> $DIR/two-unstables.rs:11:25
   |
LL | const USE_NOTHING: () = two_unstables::nothing();
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: use of unstable library features `c` and `d`
   = note: reason for `c`: reason c
   = note: see issue #3 <https://github.com/rust-lang/rust/issues/3> for more information
   = note: see issue #4 <https://github.com/rust-lang/rust/issues/4> for more information about `d`
   = help: add `#![feature(c, d)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0046, E0658.
For more information about an error, try `rustc --explain E0046`.
